# rust-paprika-api-fork

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  lib.rs  main.rs
