[package]
name = "paprika-api"
version = "1.0.0"
edition = "2018"
authors = ["Andrew Thomas (CyanBlob) <andrewjamest1993@gmail.com"]
license = "MIT"
description = "A Rust wrapper for the Paprika 3 Recipe Manager API: https://www.paprikaapp.com"
homepage = "https://gitlab.com/CyanBlob/paprika-api"
repository = "https://gitlab.com/CyanBlob/paprika-api"
readme = "README.md"
keywords = ["paprika", "recipe", "recipes"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
flate2 = "1.0.20"
hex = "0.4.3"
mockito = "0.30.0"
lazy_static = "1.4.0"